FusionDev Backup1/src/objects/Intgeration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log__c</fullName>
        <inlineHelpText>If any error happen it will record</inlineHelpText>
        <label>Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>Intgeration Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Intgeration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IntgerationLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>